--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,7 +69,7 @@ all = [
 dev = [
     "hatch>=1.13.0",
     "ruff>=0.9.5",
-    "duckdb>=1.0",
+    "duckdb>=1.0; python_version<\"3.14\"",
     "ipython",
     "ipykernel",
     "pandas>=1.1.3",
@@ -82,7 +82,7 @@ dev = [
     "pandas-stubs",
     "types-jsonschema",
     "types-setuptools",
-    "geopandas",
+    "geopandas>=0.14.3; python_version<\"3.14\"",
     "polars>=0.20.3",
     "taskipy>=1.14.1",
     "tomli>=2.2.1",
@@ -127,7 +127,7 @@ doc     = { features = ["all", "dev", "doc"] }
 [tool.hatch.envs.hatch-test]
 # https://hatch.pypa.io/latest/tutorials/testing/overview/
 features = ["all", "dev", "doc"]
-matrix   = [{ python = ["3.9", "3.10", "3.11", "3.12", "3.13"] }]
+matrix   = [{ python = ["3.9", "3.10", "3.11", "3.12", "3.13", "3.14"] }]
 
 [tool.ruff]
 extend-exclude = [
@@ -319,7 +319,8 @@ addopts = [
 markers = [
     "slow: Label tests as slow (deselect with '-m \"not slow\"')",
     "datasets_debug: Disabled by default due to high number of requests",
-    "no_xdist: Unsafe to run in parallel"
+    "no_xdist: Unsafe to run in parallel",
+    "geospatial: Tests that require geopandas (deselect with '-m \"not geospatial\"')"
 ]
 
 [tool.mypy]
